@@ -8,6 +8,9 @@ ChangeLog (2004.nn.nn):
 =======================
 
 - Applied patches:
+   - iometer-2003.12.16-post.DS2.DanielEnforceParameters.patch by
+     Daniel Scheibli (enforces usage of parameter -m when -i was
+     specified).
    - iometer-netware.patch by Thayne Harmon (adds two minor changes
      to the code and Makefile for the Netware/IA32 port).
    - iometer-2003.12.16-post.DS2.patch by Thayne Harmon (adds some more
